@@ -1,4 +1,5 @@
 /**
- * Support classes for integrating the <em>Spring TestContext Framework</em> with JUnit.
+ * Support classes for integrating the <em>Spring TestContext Framework</em>
+ * with JUnit 4.12 or higher.
  */
 package org.springframework.test.context.junit4;
